# RePlay

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  poetry_wrapper.sh  pyproject.toml  setup.cfg
.github/workflows/: deploy_docs.yml  main.yml  publish.yaml
.gitlab/workflows/: main.yml
docs/pages/: installation.rst
docs/pages/modules/: models.rst  preprocessing.rst  scenarios.rst
examples/: 08_sasrec_example.ipynb  09_sasrec_example.ipynb  10_bert4rec_example.ipynb  11_polars_spark_pandas_comparison.ipynb  11_sasrec_dataframes_comparison.ipynb  get_user_embeddings_bert_example.ipynb  get_user_embeddings_example.ipynb  undersampling.ipynb
experiments/: 01_replay_basics.ipynb  02_models_comparison.ipynb  03_features_preprocessing_and_lightFM.ipynb  06_item2item_recommendations.ipynb  07_filters.ipynb  cql_compare.py
projects/: pyproject.toml.template
replay/: model_handler.py
replay/data/: __init__.py  dataset.py  schema.py
replay/data/dataset_utils/: __init__.py  dataset_label_encoder.py
replay/data/nn/: schema.py  sequence_tokenizer.py  sequential_dataset.py  torch_sequential_dataset.py  utils.py
replay/experimental/metrics/: __init__.py  base_metric.py  coverage.py  experiment.py  hitrate.py  map.py  mrr.py  ncis_precision.py  ndcg.py  precision.py  recall.py  rocauc.py  surprisal.py  unexpectedness.py
replay/experimental/models/: __init__.py  admm_slim.py  als.py  base_neighbour_rec.py  base_rec.py  base_torch_rec.py  cql.py  ddpg.py  implicit_wrap.py  lightfm_wrap.py  mult_vae.py  neuromf.py  pop_rec.py  random_rec.py  scala_als.py
replay/experimental/models/dt4rec/: dt4rec.py  gpt1.py  trainer.py  utils.py
replay/experimental/preprocessing/: data_preparator.py  padder.py  sequence_generator.py
replay/experimental/scenarios/: __init__.py
replay/experimental/scenarios/obp_wrapper/: obp_optuna_objective.py  replay_offline.py
replay/experimental/scenarios/two_stages/: two_stages_scenario.py
replay/experimental/utils/: model_handler.py  session_handler.py
replay/metrics/: base_metric.py  categorical_diversity.py  coverage.py  descriptors.py  experiment.py  hitrate.py  map.py  ndcg.py  novelty.py  offline_metrics.py  precision.py  recall.py  rocauc.py  surprisal.py  torch_metrics_builder.py  unexpectedness.py
replay/models/: __init__.py  als.py  association_rules.py  base_neighbour_rec.py  base_rec.py  base_torch_rec.py  cat_pop_rec.py  cluster.py  knn.py  mult_vae.py  neuromf.py  pop_rec.py  query_pop_rec.py  random_rec.py  slim.py  ucb.py  wilson.py  word2vec.py
replay/optimization/: optuna_objective.py
replay/preprocessing/: __init__.py  converter.py  filters.py  history_based_fp.py  label_encoder.py  min_max_interactions_filter.py  padder.py  sequence_generator.py  sessionizer.py
replay/scenarios/: basescenario.py  fallback.py
replay/splitters/: base_splitter.py  cold_user_random_splitter.py  k_folds.py  last_n_splitter.py  new_users_splitter.py  random_splitter.py  ratio_splitter.py  time_splitter.py  two_stage_splitter.py
replay/utils/: __init__.py  common.py  dataframe_bucketizer.py  distributions.py  model_handler.py  session_handler.py  spark_utils.py  types.py
tests/: conftest.py  test_save_load.py  utils.py
tests/data/: test_dataset.py  test_dataset_utils.py
tests/data/nn/: conftest.py  test_sequence_tokenizer.py  test_sequential_dataset.py
tests/experimental/metrics/: test_experimental_metrics.py
tests/experimental/models/: test_admm_slim.py  test_als.py  test_cql.py  test_ddpg.py  test_dt4rec.py  test_implicit_wrap.py  test_lightfm_wrap.py  test_neuromf.py  test_scala_als.py  test_vae.py
tests/experimental/preprocessing/: test_all_to_numeric.py  test_data_preparator.py  test_join_based_indexer.py
tests/experimental/scenarios/: test_two_stages_scenario.py
tests/experimental/utils/: test_save_load_indexer.py
tests/metrics/: conftest.py  test_metrics.py  test_metrics_builder.py
tests/models/: test_all_models.py  test_als.py  test_ann.py  test_ann_utils.py  test_association_rules.py  test_base_rec.py  test_cat_pop_rec.py  test_cluster.py  test_knn.py  test_lightfm_wrap.py  test_neuromf.py  test_pop_rec.py  test_random_rec.py  test_save_load_models.py  test_slim.py  test_thompson_sampling.py  test_ucb.py  test_vae.py  test_wilson.py  test_word2vec.py
tests/optimization/: test_optuna.py
tests/preprocessing/: conftest.py  test_filters.py  test_history_based_features.py  test_interactions_entries_filter.py  test_label_encoder.py  test_min_max_interactions_filter.py  test_padder.py  test_sequence_generator.py
tests/splitters/: test_cold_user_randrom_splitter.py  test_k_folds.py  test_last_n_splitter.py  test_new_user_splitter.py  test_random_splitter.py  test_ratio_splitter.py  test_save_load_splitters.py  test_time_splitter.py  test_two_stage_splitter.py
tests/utils/: test_dataframe_bucketizer.py  test_fallback.py  test_save_load.py  test_utils.py
(+31 files in other folders)
