[tool.poetry]
name = "replay-rec"
version = "0.11.0"
license = "Apache-2.0"
description = "RecSys Library"
authors = ["AI Lab",
           "Alexey Vasilev",
           "Anna Volodkevich",
           "Alexey Grishanov",
           "Yan-Martin Tamm",
           "Boris Shminke",
           "Alexander Sidorenko",
           "Roza Aysina"]
readme = "README.md"
homepage = "https://sb-ai-lab.github.io/RePlay/"
repository = "https://github.com/sb-ai-lab/RePlay"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "replay" }
]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
# lightfm = "1.17"
lightautoml = "0.3.8b1"
numpy = ">=1.20.0"
optuna = "3.2.0"
pandas = "1.4.3"
psutil = "5.9.5"
pyspark = ">=3.0, < 3.2"
scipy = "1.8.1"
scikit-learn = "1.3.0"
numba = ">=0.50"
llvmlite = ">=0.32.1"
seaborn = "0.12.2"
matplotlib = "3.7.2"
pyarrow = "^12.0.1"
implicit = "0.7.0"
torch = "1.13.1"
pytorch-ranger = "^0.1.1"
d3rlpy = "1.1.1"
# required by d3rlpy
gym = "0.17.2"
nmslib = "*"
hnswlib = "*"
cached-property = "*"


[tool.poetry.dev-dependencies]
# visualization
jupyter = "1.0.0"
jupyterlab = "4.0.3"
# testing
pytest = ">=7.1.0"
pytest-cov = ">=3.0.0"
statsmodels = "0.14.0"
# style
flake8 = "^6"
black = "^23.3"
pre-commit = "3.3.3"
pylint = "^2.17"
# docs
sphinx = "5.3.0"
sphinx-rtd-theme = "1.2.2"
sphinx-autodoc-typehints = "1.23.0"
myst-parser = "1.0.0"
ghp-import = "2.1.0"
docutils = "0.16"
# stubs
data-science-types = "0.2.23"
pyspark-stubs = "3.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
