[tool.poetry]
name = "replay-rec"
version = "0.11.0"
license = "Apache-2.0"
description = "RecSys Library"
authors = ["AI Lab",
           "Alexey Vasilev",
           "Anna Volodkevich",
           "Alexey Grishanov",
           "Yan-Martin Tamm",
           "Boris Shminke",
           "Alexander Sidorenko",
           "Roza Aysina"]
readme = "README.md"
homepage = "https://sb-ai-lab.github.io/RePlay/"
repository = "https://github.com/sb-ai-lab/RePlay"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "replay" }
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
# lightfm = "1.17"
lightautoml = [
    {version = "^0.3.8b1", python = ">=3.10"},
    {version = "~0.3.1", python = "<3.10"}
]
numpy = [
    {version = ">=1.20.0, <=1.24.0", python = "<3.10"},
    {version = ">=1.22", python = ">=3.10"}
]
optuna = "~3.2.0"
pandas = [
    {version = "~1.4.3", python = ">=3.8"},
    {version = "~1.3.5", python = "~3.7"}
]
psutil = "~5.9.5"
pyspark = ">=3.0, < 3.4"
scipy = [
    {version = "~1.8.1", python = ">=3.8"},
    {version = "~1.7.3", python = "~3.7"}
]
scikit-learn = [
    {version = "^1.3.0", python = ">=3.8"},
    {version = "~1.0.2", python = "~3.7"}
]
numba = ">=0.50"
llvmlite = ">=0.32.1"
seaborn = "~0.12.2"
matplotlib = [
    {version = "~3.7.2", python = ">=3.8"},
    {version = "~3.5.3", python = "~3.7"}
]
pyarrow = "~12.0.1"
implicit = "~0.7.0"
torch = "^1.10"
pytorch-ranger = "^0.1.1"

d3rlpy = "1.1.1"
# required by d3rlpy
gym = "0.17.2"
nmslib = "2.1.1"
hnswlib = "0.7.0"
cached-property = "1.5.2"


[tool.poetry.dev-dependencies]
# visualization
jupyter = "~1.0.0"
jupyterlab = [
    {version = "~4.0.3", python = ">=3.8"},
    {version = "~3.6.5", python = "~3.7"}
]
# testing
pytest = ">=7.1.0"
pytest-cov = ">=3.0.0"
statsmodels = [
    {version = "~0.14.0", python = ">=3.8"},
    {version = "~0.13.5", python = "~3.7"}
]
# style
black = "^23.3"  #  [jupyter]
pre-commit = [
    {version = "~3.3.3", python = ">=3.8"},
    {version = "^2.21.0", python = "~3.7"}
]
pylint = [
    {version = "^2.17", python = ">=3.8"},
    {version = "~2.13.9", python = "~3.7"}
]
pycodestyle = [
    {version = "~2.11.0", python = ">=3.8"},
    {version = "~2.9.1", python = "~3.7"}
]
# docs
sphinx = "5.3.0"
sphinx-rtd-theme = "1.2.2"
sphinx-autodoc-typehints = "1.23.0"
myst-parser = "1.0.0"
ghp-import = "2.1.0"
docutils = "0.16"
# stubs
data-science-types = "0.2.23"

[tool.black]
line-length = 120
target-versions = ["py37", "py38", "py39", "py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
